--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.10.0",
     "nuxt": "^3.8.2",
+    "nuxt-headlessui": "^1.1.4",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16"
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18"
   }
 }
